Mantendo apenas o último commit

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,15 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cinza">#FF808588</color>
     <color name="azulescuro">#FF004AF7</color>
-    <color name="azuleclaro">#FFE2EEFF</color>
-    <color name="azulemedio">#FF5F9BF4</color>
+    <color name="azulescurotransparente">#FF004AF7</color>
+    <color name="azulclaro">#FFE2EEFF</color>
+    <color name="azulmedio">#FF5F9BF4</color>
     <color name="verdeclaro">#FF84E48E</color>
     <color name="verde">#FF0A390F</color>
     <color name="vermelhoclaro">#FFFF6363</color>
     <color name="vermelho">#FFFF0000</color>
+    <color name="transparente">#00000000 </color>.
 
 </resources>
