--- a/app/src/main/res/layout/usuario_cadastro.xml
+++ b/app/src/main/res/layout/usuario_cadastro.xml
@@ -1,93 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_login"
-    tools:context=".MALoginFuncionario">
-
+    tools:context=".MACadastroUsuario">
     <ImageView
         android:id="@+id/logo"
-        android:src="@drawable/logounifor"
-
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="120dp"
         android:layout_marginLeft="25dp"
+        android:layout_marginTop="50dp"
         android:layout_marginRight="25dp"
-        >
-    </ImageView>
+        android:layout_marginBottom="120dp"
+        android:src="@drawable/logounifor"></ImageView>
 
     <TextView
-        android:id="@+id/loginFuncionarioTitulo"
-
-        android:text="Login como funcionário\nuse as credenciais:"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:textColor="@color/azulescuro"
-
+        android:id="@+id/loginUserTitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_below="@id/logo"
         android:layout_marginLeft="25dp"
+        android:layout_marginTop="0dp"
         android:layout_marginRight="25dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginBottom="5dp"
-        >
-    </TextView>
-
+        android:layout_marginBottom="0dp"
+        android:gravity="center"
+        android:text="Faça seu cadastro para começar"
+        android:textColor="@color/azulescuro"
+        android:textSize="20dp"
+        android:textStyle="bold"></TextView>
 
     <EditText
-        android:id="@+id/numeroDeIdentificacao"
-        android:hint="Númedo de identificação..."
-        android:layout_below="@+id/loginFuncionarioTitulo"
-
-        android:background="#70ffffff"
-
+        android:id="@+id/emailEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:padding="15dp"
 
+        android:layout_below="@+id/loginUserTitulo"
+
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="10dp"
+        android:background="#70ffffff"
         android:drawableLeft="@drawable/baseline_person_outline_24"
         android:drawablePadding="15dp"
-        >
-    </EditText>
+
+        android:hint="Email..."
+        android:padding="15dp"></EditText>
 
     <EditText
-        android:id="@+id/senha"
-        android:layout_below="@+id/numeroDeIdentificacao"
-        android:hint="Senha..."
-
-        android:background="#70ffffff"
-
+        android:id="@+id/senhaEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:padding="15dp"
 
+        android:layout_below="@id/emailEdit"
+
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="10dp"
+        android:background="#70ffffff"
         android:drawableLeft="@drawable/baseline_password_24"
         android:drawablePadding="15dp"
+        android:hint="Senha..."
         android:inputType="textPassword"
-        >
-    </EditText>
+        android:padding="15dp"></EditText>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/botaoDeEntrarFuncionario"
+    <EditText
+        android:id="@+id/confirmeSenhaEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@id/senhaEdit"
+
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="10dp"
+        android:background="#70ffffff"
+        android:drawableLeft="@drawable/baseline_password_24"
+        android:drawablePadding="15dp"
+
+        android:hint="Confirme a senha..."
+        android:inputType="textPassword"
+        android:padding="15dp"></EditText>
+
+
+
+    <Button
+        android:id="@+id/botaoDeCadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_below="@id/senha"
+        android:layout_below="@id/confirmeSenhaEdit"
         android:layout_centerHorizontal="true"
 
         android:layout_marginLeft="40dp"
@@ -96,30 +103,26 @@
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/azulescuro"
         android:padding="10dp"
-        android:text="ENTRAR"
+        android:text="CADASTRE-SE"
         android:textSize="15dp"
-        tools:ignore="TextSizeCheck"
-        ></com.google.android.material.button.MaterialButton>
+        android:textStyle="bold"
+        ></Button>
 
     <Button
         android:id="@+id/botaoDeLoginComoUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_below="@id/botaoDeEntrarFuncionario"
+        android:layout_below="@id/botaoDeCadastro"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="40dp"
-
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="89dp"
         android:layout_marginRight="40dp"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="#00ffffff"
+        android:backgroundTint="@color/azulclaro"
         android:padding="10dp"
-        android:text="Login como usuário"
+        android:text="Voltar para página de Login"
         android:textColor="@color/azulescuro"
         android:textSize="15dp"
-        android:textStyle="italic"
-        tools:ignore="TextSizeCheck"
-        ></Button>
+        android:textStyle="bold|italic"></Button>
 
 </RelativeLayout>
